refactor(lang): Language usage in ExchangeExpression